<resources>
    <string name="app_name">Alternative Color Views</string>
    <string name="caja_uno">Box One</string>
    <string name="caja_dos">Box Two</string>
    <string name="caja_tres">Box Three</string>
    <string name="caja_cuatro">Box Four</string>
    <string name="caja_cinco">Box Five</string>
    <string name="caja_seis">Box Six</string>
    <string name="caja_siete">Box Seven</string>
    <string name="caja_ocho">Box Eight</string>
    <string name="caja_nueve">Box Nine</string>
    <string name="caja_diez">Box Ten</string>
    <string name="como_jugar">How to play:</string>
    <string name="explicacion">Tap on the background and the views.</string>
    <string name="rojo">RED</string>
    <string name="amarillo">YELLOW</string>
    <string name="verde">GREEN</string>
    <string name="seleccionado">Selected</string>
</resources>